# smart-grid-openenv

./: .gitignore  PROJECT.md  README.md  inference.py  requirements.txt  verify_scores.py
.agents/references/: openenv-course-reference.md
checkpoints/: best_policy.npy  final_policy.npy  training_history.json
server/: app.py  requirements.txt  simulator.py  tasks.py
smart_grid/: Dockerfile  __init__.py  client.py  models.py
smart_grid/server/: Dockerfile  __init__.py  app.py  requirements.txt  smart_grid_environment.py
smart_grid_env/: Dockerfile  PROJECT.md  README.md  __init__.py  inference.py  models.py  openenv.yaml  pyproject.toml
smart_grid_env/server/: __init__.py  app.py  grid_env.py  simulator.py  tasks.py
